<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:indeterminateTint="@color/colorAccent"
        android:visibility="gone" />

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="340dp"
        android:background="@color/colorPrimary"
        android:fitsSystemWindows="true">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:id="@+id/collapsing_toolbar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fitsSystemWindows="true"
            app:contentScrim="@color/colorAccent"
            app:layout_scrollFlags="scroll|exitUntilCollapsed"
            app:statusBarScrim="@color/colorAccent">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/htab_toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:layout_above="@+id/button"
                android:layout_alignParentStart="true"
                android:gravity="top"
                android:minHeight="?android:attr/actionBarSize"
                app:layout_collapseMode="parallax" />

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fitsSystemWindows="true"
                app:layout_collapseMode="parallax">

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/img_user_detail"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_centerHorizontal="true"
                    android:overScrollMode="ifContentScrolls"
                    android:src="@color/colorAccent" />

                <TextView
                    android:id="@+id/tv_name"
                    style="@style/fontTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/img_user_detail"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="12dp"
                    android:textColor="@color/colorTitleDetail"
                    android:textSize="20sp"
                    tools:text="@string/dummy_name" />

                <TextView
                    android:id="@+id/tv_username"
                    style="@style/fontSubtitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/tv_name"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="4dp"
                    android:textColor="@color/colorTitleDetail"
                    android:textSize="14sp"
                    tools:text="@string/dummy_username" />


                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/tv_username"
                    android:layout_marginTop="4dp"
                    android:gravity="center">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="16dp"
                        android:gravity="center"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/tv_repository"
                            style="@style/fontTitle"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="@color/colorTitleDetail"
                            android:textSize="16sp"
                            tools:text="@string/dummy_total_repositories" />

                        <TextView
                            android:id="@+id/textView2"
                            style="@style/fontSubtitle"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/label_repositories"
                            android:textColor="@color/colorSubtitleDetail"
                            android:textSize="14sp" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/tv_followers"
                            style="@style/fontTitle"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:textColor="@color/colorTitleDetail"
                            android:textSize="16sp"
                            tools:text="@string/dummy_total_followers" />

                        <TextView
                            android:id="@+id/textView"
                            style="@style/fontSubtitle"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/label_followers"
                            android:textColor="@color/colorSubtitleDetail"
                            android:textSize="14sp" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:gravity="center"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/tv_following"
                            style="@style/fontTitle"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="@color/colorTitleDetail"
                            android:textSize="16sp"
                            tools:text="@string/dummy_total_following" />

                        <TextView
                            android:id="@+id/textView3"
                            style="@style/fontSubtitle"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/label_following"
                            android:textColor="@color/colorSubtitleDetail"
                            android:textSize="14sp" />
                    </LinearLayout>
                </LinearLayout>

            </RelativeLayout>


            <com.google.android.material.tabs.TabLayout
                android:id="@+id/tabs"
                android:layout_width="match_parent"
                android:layout_height="?android:attr/actionBarSize"
                android:layout_gravity="bottom"
                android:background="@color/colorPrimaryDark"
                app:tabIndicatorColor="@color/colorAccent"
                app:tabIndicatorHeight="3dp"
                app:tabTextAppearance="@style/fontTab"
                app:tabTextColor="@android:color/white" />

        </com.google.android.material.appbar.CollapsingToolbarLayout>

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:id="@+id/nestedScrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">


        <androidx.viewpager.widget.ViewPager
            android:id="@+id/view_pager"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_behavior="@string/appbar_scrolling_view_behavior" />


    </androidx.core.widget.NestedScrollView>
</androidx.coordinatorlayout.widget.CoordinatorLayout>